02.behavioral/ServiceDiscovery/service-with-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  type: LoadBalancer
  selector:
    app: random-generator
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
