02.behavioral/ServiceDiscovery/service-with-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: random-generator
spec:
  type: NodePort
  selector:
    app: random-generator
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 32766
